Initial commit political businesses

--- a/src/onegov/town6/locale/de_CH/LC_MESSAGES/onegov.town6.po
+++ b/src/onegov/town6/locale/de_CH/LC_MESSAGES/onegov.town6.po
@@ -2591,6 +2591,13 @@ msgstr "PLZ"
 msgid "City"
 msgstr "Ort"
 
+msgid "Political Business"
+msgstr "Politisches Geschäft"
+
+msgid "No political businesses defined yet."
+msgstr "Es wurden noch keine politischen Geschäfte erfasst."
+
+
 #~ msgid "Sign up"
 #~ msgstr "Anmelden"
 
