--- a/src/onegov/town6/locale/de_CH/LC_MESSAGES/onegov.town6.po
+++ b/src/onegov/town6/locale/de_CH/LC_MESSAGES/onegov.town6.po
@@ -2534,6 +2534,9 @@ msgstr ""
 msgid "Ratsinformationssystem (RIS)"
 msgstr ""
 
+msgid "Participants"
+msgstr "Beteiligte/Unterzeichnende"
+
 msgid "New Note"
 msgstr "Neue Notiz"
 
