--- a/src/onegov/town6/locale/de_CH/LC_MESSAGES/onegov.town6.po
+++ b/src/onegov/town6/locale/de_CH/LC_MESSAGES/onegov.town6.po
@@ -2594,6 +2594,8 @@ msgstr "Verschiedenes"
 msgid "Elections"
 msgstr "Wahlen"
 
+msgid "Type"
+msgstr "Typ"
 
 #~ msgid "Parliamentarian is not in this commission."
 #~ msgstr "Parlamentarier:in ist nicht in dieser Kommission."
